syntax = "proto3";
package imversed.xverse;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/imversed/imversed/x/xverse/types";

// Msg defines the Msg service.
service Msg {
  rpc CreateVerse(MsgCreateVerse) returns (MsgCreateVerseResponse);
  // this line is used by starport scaffolding # proto/tx/rpc
  rpc AddAssetToVerse(MsgAddAssetToVerse) returns (MsgAddAssetToVerseResponse);

  rpc RemoveAssetFromVerse(MsgRemoveAssetFromVerse) returns (MsgRemoveAssetFromVerseResponse);

  rpc RenameVerse(MsgRenameVerse) returns (MsgRenameVerseResponse);

  rpc AddOracleToVerse(MsgAddOracleToVerse) returns (MsgAddOracleToVerseResponse);

  rpc AuthorizeKeyToVerse(MsgAuthorizeKeyToVerse) returns (MsgAuthorizeKeyToVerseResponse);

  rpc DeauthorizeKeyToVerse(MsgDeauthorizeKeyToVerse) returns (MsgDeauthorizeKeyToVerseResponse);

  rpc UpdateVerseIcon(MsgUpdateVerseIcon) returns (MsgUpdateVerseIconResponse);

  rpc UpdateVerseDescription(MsgUpdateVerseDescription) returns (MsgUpdateVerseDescriptionResponse);
}

message MsgCreateVerse {
  string sender = 1;

  string icon = 3;

  string description = 4;
}

message MsgCreateVerseResponse {
}

message MsgAddAssetToVerse {
  string sender = 1;

  string verse_name = 2;

  string asset_type = 3;

  string asset_id = 4;

  string asset_creator = 5;

  string verse_creator = 6;
}

message MsgAddAssetToVerseResponse {
}

message MsgRenameVerse {
  string sender = 1;

  string verse_creator = 2;

  string verse_old_name = 3;

  string verse_new_name = 4;
}

message MsgRenameVerseResponse {
}

message MsgRemoveAssetFromVerse {
  string sender = 1;

  string verse_name = 2;

  string asset_type = 3;

  string asset_id = 4;

  string verse_creator = 5;
}

message MsgRemoveAssetFromVerseResponse {
}

message MsgAddOracleToVerse {
  string sender = 1;

  string verse_name = 2;

  string oracle = 3;
}

message MsgAddOracleToVerseResponse {
}

message MsgAuthorizeKeyToVerse {
  string sender = 1;

  string verse_name = 2;

  string address = 3;
}

message MsgAuthorizeKeyToVerseResponse {
}

message MsgDeauthorizeKeyToVerse {
  string sender = 1;

  string verse_name = 2;

  string address = 3;
}

message MsgDeauthorizeKeyToVerseResponse {
}

message MsgUpdateVerseIcon {
  string sender = 1;

  string verse_name = 2;

  string icon = 3;
}

message MsgUpdateVerseDescription {
  string sender = 1;

  string verse_name = 2;

  string description = 4;
}

message MsgUpdateVerseDescriptionResponse {
}

message MsgUpdateVerseIconResponse {
}
// this line is used by starport scaffolding # proto/tx/message
