syntax = "proto3";
package imversed.xverse;

import "gogoproto/gogo.proto";

option go_package = "github.com/imversed/imversed/x/xverse/types";

message Verse {
  string owner = 1;

  string name = 2;

  string icon = 3;

  string description = 4;

  repeated string smart_contracts = 5;

  string oracle = 6;

  repeated string authenticated_keys = 7;

  string dao = 8;

  int64 dao_height = 9;
}
